# sig_finder

./: .appveyor.yml  CMakeLists.txt  LICENSE  README.md  win_types.h
demo/: CMakeLists.txt  code_patterns.h  main.cpp  pattern_tree.cpp  pattern_tree.h  util.h
include/: PckrSign.h  SigFinder.h  SigTree.h
sig_finder/: CMakeLists.txt  CMakeLists.txt.bak  CRC32.h  Match.cpp  Node.cpp  PckrSign.cpp  SigFinder.cpp  SigFinder.h  SigNode.cpp  SigNode.h  SigTree.cpp  SigTree.h  Signature.cpp  pattern_tree.cpp  util.h
sig_finder/include/: Match.h  Node.h  PckrSign.h  ShortList.h  SigFinder.h  SigTree.h  Signature.h  find_helpers.h  pattern_tree.h  sig_finder.h
